src/main/java/com/revolvingmadness/testing/language/errors/NameError.java
package com.revolvingmadness.testing.language.errors;

public class NameError extends RuntimeException {
    public NameError(String error) {
        super(error);
    }
}
